--- a/Web/src/styles/style.css
+++ b/Web/src/styles/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&family=Poppins:wght@300;400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&family=Poppins:wght@300;400;600;700&display=swap");
 .ppns {
   font-family: "Poppins", sans-serif;
 }
@@ -16,12 +15,25 @@
   border: solid blue;
 }
 
+.cfm {
+  height: 300px;
+  width: 300px;
+}
 #home {
   background-image: url("https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/bghome.png");
   background-size: cover;
-  height: 100vh;
 }
 
 .home-content > h1 {
   font-size: 100px;
+}
+
+#menu {
+  background-image: url("https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/bgMenu.png");
+  background-size: cover;
+}
+
+.sub-title {
+  color: #666666;
+  font-size: 10px;
 }
