Menambahkan elemen di section Shop

--- a/Web/src/styles/style.css
+++ b/Web/src/styles/style.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&family=Poppins:wght@300;400;700&display=swap");
 
-aside {
-  background-image: url("https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/bgteam.png"); 
-  color: white;
-  background-size: cover;
-}
-
 .ppns {
   font-family: "Poppins", sans-serif;
 }
@@ -31,3 +25,37 @@ aside {
 .home-content > h1 {
   font-size: 100px;
 }
+
+aside {
+  background-image: url("https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/bgteam.png"); 
+  color: white;
+  background-size: cover;
+}
+
+footer {
+  color: white;
+  background-color: #2f2f2f;
+}
+
+footer img {
+  width: 40px;
+  height: 40px;
+  object-fit: fill;
+}
+
+#shop {
+  background-color: bisque;
+}
+
+#shop .card {
+  background-color: white;
+  width: 30vh;
+  height: 30vh;
+
+  @media screen and (max-width: 530px) {
+    width: 75vw;
+    height: 75vw;
+  }
+}
+
+
