optimasi slider dan membuat folder 'data'

--- a/Web/src/styles/slider.css
+++ b/Web/src/styles/slider.css
@@ -1,18 +1,27 @@
 :root {
   --widthsliding: 300px;
 }
+
+input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #87805e;
+  border-radius: 50%;
+}
 /* input1 */
 
-.range-input {
+/* .range-input1 {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   display: flex;
   align-items: center;
   border-radius: 10px;
-}
+} */
 
-.range-input .value {
+/* .range-input1 .value1 {
   color: #2f2f2f;
   text-align: center;
   font-weight: 600;
@@ -20,11 +29,12 @@
   height: 40px;
   overflow: hidden;
   margin-left: 10px;
-}
-.range-input .value div {
+} */
+
+/* .range-input1 .value1 div {
   transition: all 300ms ease-in-out;
-}
-.range-input input {
+} */
+/* .range-input1 input {
   box-shadow: inset 0 0 3px 0.2px rgb(0, 0, 0, 0.5);
   -moz-appearance: none;
   appearance: none;
@@ -35,17 +45,9 @@
   background: #eddfb3;
   border: none;
   outline: none;
-}
-.range-input input::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 16px;
-  height: 16px;
-  background: #87805e;
-  border-radius: 50%;
-}
+} */
 
-/* input2 */
+/* input2
 .range-input2 {
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -53,9 +55,9 @@
   display: flex;
   align-items: center;
   border-radius: 10px;
-}
+} */
 
-.range-input2 .value2 {
+/* .range-input2 .value2 {
   color: #2f2f2f;
   text-align: center;
   font-weight: 600;
@@ -63,9 +65,9 @@
   height: 40px;
   overflow: hidden;
   margin-left: 10px;
-}
+} */
 
-.range-input2 .value2 div {
+/* .range-input2 .value2 div {
   transition: all 300ms ease-in-out;
 }
 
@@ -80,19 +82,19 @@
   background: #eddfb3;
   border: none;
   outline: none;
-}
-.range-input2 input::-webkit-slider-thumb {
+} */
+/* .range-input2 input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 16px;
   height: 16px;
   background: #87805e;
   border-radius: 50%;
-}
+} */
 
 /* input 3 */
 
-.range-input3 {
+/* .range-input3 {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -132,4 +134,4 @@
   height: 16px;
   background: #87805e;
   border-radius: 50%;
-}
+} */
