--- a/Web/src/styles/style.css
+++ b/Web/src/styles/style.css
@@ -86,6 +86,10 @@ footer img {
   object-fit: fill;
 }
 
+#team img {
+  width: 20vw;
+  height: 20vw;
+}
 
 @media screen and (max-width: 1030px) {
   .desc-hasil > p {
@@ -116,6 +120,11 @@ footer img {
   :root {
     --widthrange: 100%;
   }
+
+  #team img {
+    width: 37vw;
+    height: 37vw;
+  }
 }
 @media screen and (max-width: 576px) {
   :root {
@@ -136,7 +145,8 @@ footer img {
     border-radius: 0px;
   }
 
-  /* .hasil-rekomendasi-container {
-    display: none !important;
-  } */
+  #team img {
+    width: 100%;
+    height: 100%;
+  }
 }
