--- a/Web/src/styles/style.css
+++ b/Web/src/styles/style.css
@@ -153,16 +153,19 @@ footer img {
   }
 }
 
+@media screen and (max-width: 576px) {
+  #team img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @media screen and (max-width: 350px) {
   #menu img {
     max-width: 150px;
     max-height: 150px;
   }
 
-  #team img {
-    width: 100%;
-    height: 100%;
-  }
   .menu_title > h2 {
     font-size: 1.5rem !important;
   }
